--- a/theme.html
+++ b/theme.html
@@ -18,7 +18,7 @@
         <{assign var=span value="span"}>
     <{/if}>
 
-    <{includeq file="$xoops_rootpath/modules/tadtools/$tpl_folder/meta.html"}>
+    <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/meta.html"}>
 
     <!-- 網站的標題及標語 -->
     <title><{$xoops_sitename}> - <{$xoops_pagetitle}></title>
@@ -56,7 +56,7 @@
 
       <div class="<{$row}>" id="container_header">
         <div class="<{$span}>8" id="container_logo">
-          <{includeq file="$xoops_rootpath/modules/tadtools/$tpl_folder/slideshow_responsive.html"}>
+          <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/menu/responsive_slide.html"}>
         </div>
 
         <div class="<{$span}>4" id="container_block">
@@ -67,7 +67,7 @@
 
       <div id="container_menu">
         <div id="container_nav" class="text-center">
-          <{includeq file="$xoops_rootpath/modules/tadtools/$tpl_folder/menu/cssmenu/menu.html"}>
+          <{includeq file="$xoops_rootpath/modules/tadtools/$tpl_folder/navbar.html"}>
         </div>
       </div>
 
@@ -78,7 +78,7 @@
 
 
       <div id="container_foot_img">
-        <img src="<{xoImgUrl images/templatemo_footer_background.gif}>" alt="background">
+        <img src="<{xoImgUrl images/templatemo_footer_background.gif}>" alt="background" title="background" style="max-width: 100%;">
       </div>
 
 
@@ -96,7 +96,7 @@
 
     <!-- 是否顯示樣板變數資訊 -->
     <{if $show_var==1}>
-      <{includeq file="$xoops_rootpath/modules/tadtools/$tpl_folder/show_var.html"}>
+      <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/show_var.html"}>
     <{/if}>
   </body>
 </html>
