--- a/theme.html
+++ b/theme.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="<{$span}>4" id="container_block">
-          <{block id=337}>
+          <{block id=$block_id}>
         </div>
       </div>
 
