將 col-md 改為 col-sm

--- a/modules/system/system_siteclosed.html
+++ b/modules/system/system_siteclosed.html
@@ -49,11 +49,11 @@
       </div>
 
       <div class="row" id="container_header">
-        <div class="col-sm-8 col-md-8" id="container_logo">
+        <div class="col-sm-8 col-sm-8" id="container_logo">
           <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/menu/responsive_slide.html"}>
         </div>
 
-        <div class="col-sm-4 col-md-4" id="container_block">
+        <div class="col-sm-4 col-sm-4" id="container_block">
           <{block id=$block_id}>
         </div>
       </div>
@@ -69,8 +69,8 @@
       <div id="container_content">
         <!-- 載入布局 -->
         <div class="row">
-          <div class="col-md-12">
-              <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/siteclosed_login.tpl"}>
+          <div class="col-sm-12">
+              <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/siteclosed_login.html"}>
           </div>
         </div>
 
