--- a/theme.html
+++ b/theme.html
@@ -6,20 +6,20 @@
     <{assign var=theme_name value=$xoTheme->folderName}>
 
     <!--載入由使用者設定的各項佈景變數-->
-    <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/get_var.html"}>
+    <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/get_var.tpl"}>
 
-    <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/meta.html"}>
+    <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/meta.tpl"}>
 
     <!-- 網站的標題及標語 -->
     <title><{$xoops_sitename}> - <{$xoops_pagetitle}></title>
 
-    <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/link_css.html"}>
+    <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/link_css.tpl"}>
 
     <!-- 給模組套用的樣板標籤 -->
     <{$xoops_module_header}>
 
-    <!-- 局部套用的樣式，如果有載入完整樣式 theme_css.html 那就不需要這一部份 -->
-    <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/theme_css.html"}>
+    <!-- 局部套用的樣式，如果有載入完整樣式 theme_css.tpl 那就不需要這一部份 -->
+    <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/theme_css.tpl"}>
 
     <!-- 載入 jquery -->
     <style type="text/css">
@@ -35,7 +35,7 @@
       <div id="container_title">
         <{if $logo_img}>
           <div id="img_title">
-            <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/logo.html"}>
+            <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/logo.tpl"}>
           </div>
         <{else}>
           <div id="title">
@@ -46,7 +46,7 @@
 
       <div class="row" id="container_header">
         <div class="col-sm-8 col-md-8" id="container_logo">
-          <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/menu/responsive_slide.html"}>
+          <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/menu/responsive_slide.tpl"}>
         </div>
 
         <div class="col-sm-4 col-md-4" id="container_block">
@@ -57,13 +57,13 @@
 
       <div id="container_menu">
         <div id="container_nav" class="text-center">
-          <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/navbar.html"}>
+          <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/navbar.tpl"}>
         </div>
       </div>
 
 
       <div id="container_content">
-        <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/$theme_type.html"}>
+        <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/$theme_type.tpl"}>
       </div>
 
 
@@ -87,14 +87,14 @@
     </div>
 
     <!-- 載入 BootStrap所需的javascript -->
-    <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/bootstrap_js.html"}>
+    <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/bootstrap_js.tpl"}>
 
     <!-- 載入自訂的javascript -->
-    <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/my_js.html"}>
+    <{includeq file="$xoops_rootpath/modules/tadtools/themes3_tpl/my_js.tpl"}>
 
     <!-- 是否顯示樣板變數資訊 -->
     <{if $show_var==1}>
-      <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/show_var.html"}>
+      <{includeq file="$xoops_rootpath/modules/tadtools/themes_common/show_var.tpl"}>
     <{/if}>
   </body>
 </html>
